--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "godot_cpp"]
 	path = godot_cpp
-	url = https://github.com/jihuayu/godot_cpp
+	url = https://github.com/jihuayu/godot-cpp
 	branch = 3.1
 
 
